# Daysim

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker.yml
resources/: CMakeLists.txt
resources/cmake_tests/: CMakeLists.txt  test_evalglare.cmake
src/: CMakeLists.txt  calculate_sky_patches.c
src/common/: CMakeLists.txt  bsdf_t.c  paths.h
src/daysim/: 60min_file.c  BlindModel.c  CMakeLists.txt  allocate_memory.c  analysis_data.c  analysis_data.h  cPerezSkyModel.cpp  cPerezSkyModel.h  cSkyVault.cpp  cSkyVault.h  cSun.cpp  calculate_Perez.c  calculate_Perez.h  calculate_sky_patches.c  calculate_sky_patches.h  calculate_sky_patches_gen_dc.c  check_direct_sunlight.c  check_direct_sunlight.h  clearsky_models.c  clearsky_models.h  climateFile.cpp  climateFile.h  daylightfactor.c  daylightfactor.h  diverse_functions.c  ds_constants.h  ds_el_lighting.c  ds_el_lighting.h  ds_illum.c  ds_illum.h  ds_shortterm.c  ds_shortterm.h  file.c  file.h  fropen.c  gen_dc.c  gen_dgp_profile.c  gen_directsunlight.c  gen_reindl.c  gen_reindl.vcxproj  (+38 more)
src/daysim/common 12.54.42 PM/: BlindModel.h  check_direct_sunlight.c  daylightfactor.c  fropen.c  fropen.h  getpath.c  parse.c  read_in_header.c  sun.c  sun.h  win_popen.c  words.c
src/daysim/gen_dc/: calculate_sky_patches_gen_dc.c  calculate_sky_patches_gen_dc.h  gen_dc.c  gen_dc.c.org  gen_dc.c.orig  gen_dc.c_20120417  makefile  write_dds_files.c
src/ds_el_lighting/: allocate_memory.c  allocate_memory.h  analysis_data.c  ds_el_lighting.c  get_illuminances.c  lightswitch.c  lightswitch.h  simulation_assumptions.c  win_popen.h
src/ds_illum/src/: calculate_Perez.c  calculate_Perez.h  calculate_sky_patches.c  ds_illum.c  shadow_testing.c  shadow_testing.h
src/hd/: CMakeLists.txt
src/px/: CMakeLists.txt
src/qtrvu/: CMakeLists.txt
src/rt/: CMakeLists.txt  ambient.c  create_version.cmake  daysim.c  daysim.h  m_brdf.c  m_bsdf.c  normal.c  pmap.c  pmapcontrib.c  ray.h  rtmain.c  rtrace.c
src/util/: CMakeLists.txt
